--- a/app/modules/PreLoader/style.scss
+++ b/app/modules/PreLoader/style.scss
@@ -8,6 +8,7 @@
   top: 0px;
   bottom: 0px;
   right: 0px;
+  visibility:visible;
   background-color: $secondaryColor;
     .progress {
       vertical-align: middle;
